index.jade updated

--- a/view/index.jade
+++ b/view/index.jade
@@ -8,10 +8,10 @@ html(lang='ja')
 body
   #login-panel
     form#login-form
-      p#login-note ユーザ名を入力してください。
+      p#login-note ニックネームを入力してください。
       fieldset#username-box
         input#username(placeholder="nickname")
-      p#login-error ユーザ名は既に使われています。
+      p#login-error そのニックネームは既に使われています。
       p#login-box
         a#login(href="#login") Login
   #main
